Completed static pages lab

--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -14,10 +14,16 @@
 </head>
 
     <body>
-    <!-- Remove this line the first time you edit this file -->
      This is the index page of your Django app!
     <!--Add a nav bar here -->
-
+        <nav class="navbar navbar-light bg-light">
+            <navitem> 
+                <a href="https://raekwill15-8000.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/djangoapp/about">About</a>
+            </navitem>
+            <navitem>
+                <a href="https://raekwill15-8000.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/djangoapp/contact">Contact us</a>
+            </navitem>
+        </nav>
     <!--Add a dealer table here -->
 
     </body>
