added navbar to index

--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -14,16 +14,45 @@
 </head>
 
     <body>
-     This is the index page of your Django app!
     <!--Add a nav bar here -->
-        <nav class="navbar navbar-light bg-light">
-            <navitem> 
-                <a href="https://raekwill15-8000.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/djangoapp/about">About</a>
-            </navitem>
-            <navitem>
-                <a href="https://raekwill15-8000.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/djangoapp/contact">Contact us</a>
-            </navitem>
+        <nav class="navbar navbar-light bg-light d-flex justify-content-between align-items-center">
+            <!-- <div class=""> -->
+                <div>
+                <a class="navbar-brand">Dealership Review</a>
+                </div>
+                <div>
+                <ul class="navbar-nav list-group-horizontal d-flex align-items-center">
+                    <li class="nav-item"> 
+                        <a class="nav-link p-3" href="https://raekwill15-8000.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/djangoapp/about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link p-3" href="https://raekwill15-8000.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/djangoapp/contact">Contact us</a>
+                    </li>
+                    {% if True %}
+                    <li class="nav-item">
+                        <form class="">
+                            <input class="mt-1" type="text" placeholder="Username"/>
+                            <input class="" type="password" placeholder="Password"/>
+                            <button type="submit" class="btn btn-primary p-2 mb-1">Sign In</button>
+                        </form>
+                    </li>
+                    <li class="nav-item">
+                        <button class="btn btn-light p-2 mb-1 ml-2">Sign Up</button>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        Welcome {user.username} user
+                    </li>
+                    <li class="nav-item">
+                        <button class="btn btn-light p-2 mb-1 ml-2">Logout</button>
+                    </li>
+                    {% endif %}
+                </ul>
+                <!-- </div> -->
+            </div>
         </nav>
+        This is the index page of your Django app!
+
     <!--Add a dealer table here -->
 
     </body>
