--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-light bg-light d-flex justify-content-between align-items-center">
             <!-- <div class=""> -->
                 <div>
-                <a class="navbar-brand">Dealership Review</a>
+                <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Dealership Review</a>
                 </div>
                 <div>
                 <ul class="navbar-nav list-group-horizontal d-flex align-items-center">
@@ -44,7 +44,7 @@
                         </form>
                     </li>
                     <li class="nav-item">
-                        <button class="btn btn-light p-2 mb-1 ml-2">Sign Up</button>
+                        <a href="{% url 'djangoapp:signup' %}"><button class="btn btn-light p-2 mb-1 ml-2">Sign Up</button> </a>
                     </li>
                     {% endif %}
                 </ul>
