--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -8,7 +8,67 @@
 </head>
 
     <body>
-
+        <nav class="navbar navbar-light bg-light d-flex justify-content-between align-items-center">
+            <!-- <div class=""> -->
+                <div>
+                <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Dealership Review</a>
+                </div>
+                <div>
+                <ul class="navbar-nav list-group-horizontal d-flex align-items-center">
+                    <li class="nav-item"> 
+                        <a class="nav-link p-3" href="https://raekwill15-8000.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/djangoapp/about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link p-3" href="https://raekwill15-8000.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/djangoapp/contact">Contact us</a>
+                    </li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a href="{% url 'djangoapp:add_review' dealer_id=0 %}" class="nav-link p-3">Add Review</a>
+                    </li>
+                    <li class="nav-item">
+                        Welcome {{user.username}}
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'djangoapp:logout'%}"><button class="btn btn-light p-2 mb-1 ml-2">Logout</button></a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <form class="" action="{% url 'djangoapp:login' %}" method="post">
+                            <input class="mt-1" type="text" placeholder="Username" name="username"/>
+                            <input class="" type="password" placeholder="Password" name="psw"/>
+                            <button type="submit" class="btn btn-primary p-2 mb-1">Sign In</button>
+                        </form>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'djangoapp:signup' %}"><button class="btn btn-light p-2 mb-1 ml-2">Sign Up</button> </a>
+                    </li>
+                    {% endif %}
+                </ul>
+                <!-- </div> -->
+            </div>
+        </nav>
+        <h2>Reviews for </h2>
+        <div class="card-columns"> 
+            {% for review in reviews %}
+            <div class="card">
+                {% if review.sentiment == "positive" %}
+                    <img class="card-img-left" src="../../../static/media/emoji/positive.png" alt="positive green emoji">
+                {% elif review.sentiment == "neutral" %}
+                    <img class="card-img-left" src="../../../static/media/emoji/neutral.png" alt="neutral yellow emoji">
+                {% elif review.sentiment == "negative" %}
+                    <img class="card-img-left" src="../../../static/media/emoji/negative.png" alt="negative red emoji">
+                {% endif %}
+                    <div class="card-body">
+                        <h4 class="card-title">{{review.car_make}}, {{review.car_model}}</h4>
+                        <h5 class="card-title">{{review.car_year}}</h5>
+                        <h6 class="card-text">{{review.review}}</h6>
+                    </div>
+                {% endfor %}
+            </div>
+        
+        
+        </div>
+        <h1> DEALER DETAILS HERE!!!!</h1>
     <!--Add a nav bar here -->
 
     <!-- Add reviews as cards -->
