--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -30,6 +30,9 @@
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
+                        <a href="{% url 'djangoapp:add_review' dealer_id=0 %}" class="nav-link p-3">Add Review</a>
+                    </li>
+                    <li class="nav-item">
                         Welcome {{user.username}}
                     </li>
                     <li class="nav-item">
