--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -9,8 +9,72 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.js"></script>
 
+
 </head>
     <body>
+        <nav class="navbar navbar-light bg-light d-flex justify-content-between align-items-center">
+            <!-- <div class=""> -->
+                <div>
+                <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Dealership Review</a>
+                </div>
+                <div>
+                <ul class="navbar-nav list-group-horizontal d-flex align-items-center">
+                    <li class="nav-item"> 
+                        <a class="nav-link p-3" href="https://raekwill15-8000.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/djangoapp/about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link p-3" href="https://raekwill15-8000.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/djangoapp/contact">Contact us</a>
+                    </li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a href="{% url 'djangoapp:add_review' dealer_id=0 %}" class="nav-link p-3">Add Review</a>
+                    </li>
+                    <li class="nav-item">
+                        Welcome {{user.username}}
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'djangoapp:logout' %}"><button class="btn btn-light p-2 mb-1 ml-2">Logout</button></a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <form class="" action="{% url 'djangoapp:login' %}" method="post">
+                            <input class="mt-1" type="text" placeholder="Username" name="username"/>
+                            <input class="" type="password" placeholder="Password" name="psw"/>
+                            <button type="submit" class="btn btn-primary p-2 mb-1">Sign In</button>
+                        </form>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'djangoapp:signup' %}"><button class="btn btn-light p-2 mb-1 ml-2">Sign Up</button> </a>
+                    </li>
+                    {% endif %}
+                </ul>
+                <!-- </div> -->
+            </div>
+        </nav>
     <!--Add review form here -->
+    <h2>Add a review about <b> {{dealership.full_name}}</b> </h2> <br>
+    <form action="{% url 'djangoapp:add_review' dealer_id %}">
+        <label for="content"><b>Please enter your review here</b></label><br>
+        <textarea class="form-control" id="content" name="content" rows="2" required> </textarea>
+        <b>Car Purchased?</b> &nbsp; &nbsp;&nbsp;&nbsp;
+        <input class="form-check-input" type="Checkbox" name="purchasecheck" id="purchasecheck"> <br>
+        <label for="car"><b>Select your car (model-make-year):</b></label>
+        <select name="car" id="car" class="form-select" required>
+        {% for car in cars %}
+            <option selected value={{car.id}}>{{car.name}}-{{car.make.name}}-{{ car.year|date:"Y"}}</option>
+        {% endfor %}
+        </select>
+        <br>
+        <label for="purchasedate"><b>Select your purchase date:</b></label><br>
+        <input class="date-own form-control" type="text" name="purchasedate" id="purchasedate">
+        <button class="btn-primary" type="submit">Submit</button>
+    </form>
+
+
+    <script type="text/javascript">
+        $('.date-own').datepicker({
+           format: 'mm/dd/yyyy'
+         });
+   </script>
     </body>
 </html>
