--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -47,26 +47,25 @@
                 <!-- </div> -->
             </div>
         </nav>
-        <h2>Reviews for </h2>
+        <h2>Reviews for {{dealership.full_name}}</h2>
         <div class="card-columns"> 
             {% for review in reviews %}
-            <div class="card">
-                {% if review.sentiment == "positive" %}
-                    <img class="card-img-left" src="../../../static/media/emoji/positive.png" alt="positive green emoji">
-                {% elif review.sentiment == "neutral" %}
-                    <img class="card-img-left" src="../../../static/media/emoji/neutral.png" alt="neutral yellow emoji">
-                {% elif review.sentiment == "negative" %}
-                    <img class="card-img-left" src="../../../static/media/emoji/negative.png" alt="negative red emoji">
-                {% endif %}
+                <div class="card">
+                    {% if review.sentiment == "positive" %}
+                        <img class="card-img-left" src="{{MEDIA_URL}}/emoji/positive.png" alt="positive green emoji" width=20px>
+                    {% elif review.sentiment == "neutral" %}
+                        <img class="card-img-left" src="{{MEDIA_URL}}/emoji/neutral.png" alt="neutral yellow emoji" width=20px>
+                    {% elif review.sentiment == "negative" %}
+                        <img class="card-img-left" src="{{MEDIA_URL}}/emoji/negative.png" alt="negative red emoji" width=20px>
+                    {% endif %}
                     <div class="card-body">
                         <h4 class="card-title">{{review.car_make}}, {{review.car_model}}</h4>
                         <h5 class="card-title">{{review.car_year}}</h5>
                         <h6 class="card-text">{{review.review}}</h6>
                     </div>
-                {% endfor %}
-            </div>
-        
-        
+                </div>
+            {% endfor %}
+            
         </div>
     <!--Add a nav bar here -->
 
